--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
   <body>
+    <!-- HEADER -->
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+      <!-- NAVIGATION -->
+      <nav class="nav-links">
+        <a href="./index.html" class="logo upper">WebStudio</a>
         <ul>
           <li>
             <a href="./index.html">Studio</a>
@@ -22,7 +31,9 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <!-- /NAVIGATION -->
+      <!-- ADDRESS -->
+      <address class="contact-links">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -32,13 +43,19 @@
           </li>
         </ul>
       </address>
+      <!-- /ADDRESS -->
     </header>
+    <!-- HEADER -->
+    <!-- MAIN -->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- SECTION-HERO -->
+      <section class="hero">
+        <h1 class="hero-text">Effective Solutions for Your Business</h1>
+        <button type="button" class="primary-btn">Order Service</button>
       </section>
-      <section>
+      <!-- /SECTION-HERO -->
+      <!-- SECTION-ADVANTAGES -->
+      <section class="advantages">
         <h2>Advantages</h2>
         <ul>
           <li>
@@ -71,7 +88,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <!-- /SECTION-ADVANTAGES -->
+      <!-- SECTION-FEATURES -->
+      <section class="features">
         <h2>What are we doing</h2>
         <ul>
           <li>
@@ -101,7 +120,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <!-- /SECTION-FEATURES -->
+      <!-- SECTION-TEAM -->
+      <section class="team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -146,13 +167,17 @@
           </li>
         </ul>
       </section>
+      <!-- /SECTION-TEAM -->
     </main>
+    <!-- /MAIN -->
+    <!-- FOOTER -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo bottom">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
+    <!-- /FOOTER -->
   </body>
 </html>
