--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <header>
       <!-- NAVIGATION -->
       <nav class="nav-links">
-        <a href="./index.html" class="logo upper">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="logo link">Web<span>Studio</span></a>
+        <ul class="list">
           <li>
             <a href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="./index.html">Portfolio</a>
+            <a href="./portfolio.htm">Portfolio</a>
           </li>
           <li>
             <a href="./index.html">Contacts</a>
@@ -34,7 +34,7 @@
       <!-- /NAVIGATION -->
       <!-- ADDRESS -->
       <address class="contact-links">
-        <ul>
+        <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
