--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
     <header>
       <!-- NAVIGATION -->
       <nav class="nav-links">
-        <a href="./index.html" class="logo link">Web<span>Studio</span></a>
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-web">Studio</span></a
+        >
         <ul class="list">
-          <li>
+          <li class="list link">
             <a href="./index.html">Studio</a>
           </li>
-          <li>
+          <li class="list link">
             <a href="./portfolio.htm">Portfolio</a>
           </li>
-          <li>
-            <a href="./index.html">Contacts</a>
+          <li class="list link">
+            <a href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -57,31 +59,31 @@
       <!-- SECTION-ADVANTAGES -->
       <section class="advantages">
         <h2>Advantages</h2>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="adv-list">
             <h3>Strategy</h3>
-            <p>
+            <p class="adv-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="adv-list">
             <h3>Punctuality</h3>
-            <p>
+            <p class="adv-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="adv-list">
             <h3>Diligence</h3>
-            <p>
+            <p class="adv-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="adv-list">
             <h3>Technologies</h3>
-            <p>
+            <p class="adv-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -91,9 +93,9 @@
       <!-- /SECTION-ADVANTAGES -->
       <!-- SECTION-FEATURES -->
       <section class="features">
-        <h2>What are we doing</h2>
+        <h2 class="features-head">What are we doing</h2>
         <ul>
-          <li>
+          <li class="list">
             <img
               src="./images/pc.jpg"
               alt="personal computer"
@@ -102,7 +104,7 @@
             />
           </li>
 
-          <li>
+          <li class="list">
             <img
               src="./images/smartphones.jpg"
               alt="smartphones"
@@ -110,7 +112,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/pcwithsmartphones.jpg"
               alt="smartphones with personal computer"
