--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- NAVIGATION -->
       <nav class="nav-links">
         <a href="./index.html" class="logo link"
-          >Web<span class="logo-web">Studio</span></a
+          >Web<span class="logo-header">Studio</span></a
         >
         <ul class="list">
           <li class="list link">
@@ -37,10 +37,10 @@
       <!-- ADDRESS -->
       <address class="contact-links">
         <ul class="list">
-          <li>
+          <li class="contact-list">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="contact-list">
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -50,13 +50,13 @@
     <!-- HEADER -->
     <!-- MAIN -->
     <main>
-      <!-- SECTION-HERO -->
+      <!-- SECTION-HERO #1 -->
       <section class="hero">
         <h1 class="hero-text">Effective Solutions for Your Business</h1>
         <button type="button" class="primary-btn">Order Service</button>
       </section>
       <!-- /SECTION-HERO -->
-      <!-- SECTION-ADVANTAGES -->
+      <!-- SECTION-ADVANTAGES #2 -->
       <section class="advantages">
         <h2>Advantages</h2>
         <ul class="list">
@@ -91,7 +91,7 @@
         </ul>
       </section>
       <!-- /SECTION-ADVANTAGES -->
-      <!-- SECTION-FEATURES -->
+      <!-- SECTION-FEATURES #3 -->
       <section class="features">
         <h2 class="features-head">What are we doing</h2>
         <ul>
@@ -123,11 +123,11 @@
         </ul>
       </section>
       <!-- /SECTION-FEATURES -->
-      <!-- SECTION-TEAM -->
+      <!-- SECTION-TEAM #4 -->
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="team-head">Our Team</h2>
         <ul>
-          <li>
+          <li class="list">
             <img
               src="./images/markguerrero.jpg"
               alt="Mark Guerrero"
@@ -137,7 +137,7 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/tomford.jpg"
               alt="Tom Ford"
@@ -147,7 +147,7 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/camilagarcia.jpg"
               alt="mCamila Garcia"
@@ -157,7 +157,7 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
@@ -173,9 +173,10 @@
     </main>
     <!-- /MAIN -->
     <!-- FOOTER -->
-    <footer>
-      <a href="./index.html" class="logo bottom">WebStudio</a>
-      <p>
+    <footer class="footer">
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-footer">Studio</span></a
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
