--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- /SECTION-HERO -->
       <!-- SECTION-ADVANTAGES #2 -->
       <section class="advantages">
-        <h2>Advantages</h2>
+        <h2 class="adv-head">Advantages</h2>
         <ul class="list">
           <li class="adv-list">
             <h3>Strategy</h3>
@@ -94,7 +94,7 @@
       <!-- SECTION-FEATURES #3 -->
       <section class="features">
         <h2 class="features-head">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li class="list">
             <img
               src="./images/pc.jpg"
@@ -126,7 +126,7 @@
       <!-- SECTION-TEAM #4 -->
       <section class="team">
         <h2 class="team-head">Our Team</h2>
-        <ul>
+        <ul class="list">
           <li class="list">
             <img
               src="./images/markguerrero.jpg"
