--- a/portfolio.html
+++ b/portfolio.html
@@ -18,27 +18,29 @@
     <header>
       <!-- NAVIGATION -->
       <nav class="nav-links">
-        <a href="./index.html" class="logo upper">WebStudio</a>
-        <ul>
-          <li>
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-header">Studio</span></a
+        >
+        <ul class="list">
+          <li class="list link">
             <a href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="./index.html">Portfolio</a>
+          <li class="list link">
+            <a href="./portfolio.htm">Portfolio</a>
           </li>
-          <li>
-            <a href="./index.html">Contacts</a>
+          <li class="list link">
+            <a href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- /NAVIGATION -->
       <!-- ADDRESS -->
       <address class="contact-links">
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="contact-list">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="contact-list">
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -47,26 +49,26 @@
     </header>
     <!-- HEADER -->
     <!-- SECTION-FILTER -->
-    <section class="filter">
-      <ul>
-        <li><button type="button">All</button></li>
-      </ul>
-      <ul>
-        <li><button type="button">Web Site</button></li>
-      </ul>
-      <ul>
-        <li><button type="button">App</button></li>
-      </ul>
-      <ul>
-        <li><button type="button">Design</button></li>
-      </ul>
-      <ul>
-        <li><button type="button">Marketing</button></li>
-      </ul>
-    </section>
-    <!-- /SECTION-FILTER -->
-    <!-- SECTION-MAIN -->
     <main>
+      <section class="filter">
+        <ul>
+          <li><button type="button">All</button></li>
+        </ul>
+        <ul>
+          <li><button type="button">Web Site</button></li>
+        </ul>
+        <ul>
+          <li><button type="button">App</button></li>
+        </ul>
+        <ul>
+          <li><button type="button">Design</button></li>
+        </ul>
+        <ul>
+          <li><button type="button">Marketing</button></li>
+        </ul>
+      </section>
+      <!-- /SECTION-FILTER -->
+      <!-- SECTION-MAIN -->
       <section class="privilege">
         <ul>
           <li>
@@ -164,9 +166,11 @@
     </main>
     <!-- /SECTION-MAIN -->
     <!-- FOOTER -->
-    <footer>
-      <a href="./index.html" class="logo bottom">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo link"
+        >Web<span class="logo-footer">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
