--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
         <h2 class="adv-head">Advantages</h2>
         <ul class="list">
           <li class="adv-list">
-            <h3>Strategy</h3>
+            <h3 class="adv-first-head">Strategy</h3>
             <p class="adv-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="adv-list">
-            <h3>Punctuality</h3>
+            <h3 class="adv-first-head">Punctuality</h3>
             <p class="adv-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="adv-list">
-            <h3>Diligence</h3>
+            <h3 class="adv-first-head">Diligence</h3>
             <p class="adv-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="adv-list">
-            <h3>Technologies</h3>
+            <h3 class="adv-first-head">Technologies</h3>
             <p class="adv-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -126,7 +126,7 @@
       <!-- SECTION-TEAM #4 -->
       <section class="team">
         <h2 class="team-head">Our Team</h2>
-        <ul class="list">
+        <ul class="list team-back">
           <li class="list">
             <img
               src="./images/markguerrero.jpg"
@@ -134,8 +134,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-first-head">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li class="list">
             <img
@@ -144,8 +144,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-first-head">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li class="list">
             <img
@@ -154,8 +154,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-first-head">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li class="list">
             <img
@@ -164,8 +164,8 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-first-head">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
