--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <a href="./index.html">Studio</a>
           </li>
           <li class="list link">
-            <a href="./portfolio.htm">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
           <li class="list link">
             <a href="">Contacts</a>
