--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <!-- HEADER -->
     <header>
       <!-- NAVIGATION -->
-      <nav class="nav-links">
+      <nav class="nav">
         <a href="./index.html" class="logo link"
           >Web<span class="logo-header">Studio</span></a
         >
         <ul class="list">
           <li class="list link">
-            <a href="./index.html">Studio</a>
+            <a href="./index.html" class="nav link">Studio</a>
           </li>
           <li class="list link">
-            <a href="./portfolio.htm">Portfolio</a>
+            <a href="./portfolio.html" class="nav link">Portfolio</a>
           </li>
           <li class="list link">
-            <a href="">Contacts</a>
+            <a href="" class="nav link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -38,10 +38,14 @@
       <address class="contact-links">
         <ul class="list">
           <li class="contact-list">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contacts link"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-list">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="contacts link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
