--- a/portfolio.html
+++ b/portfolio.html
@@ -53,29 +53,30 @@
     </header>
     <!-- HEADER -->
     <!-- SECTION-FILTER -->
+    <section class="filter">
+      <ul>
+        <li><button type="button">All</button></li>
+      </ul>
+      <ul>
+        <li><button type="button">Web Site</button></li>
+      </ul>
+      <ul>
+        <li><button type="button">App</button></li>
+      </ul>
+      <ul>
+        <li><button type="button">Design</button></li>
+      </ul>
+      <ul>
+        <li><button type="button">Marketing</button></li>
+      </ul>
+    </section>
+    <!-- /SECTION-FILTER -->
+    <!-- SECTION-MAIN -->
     <main>
-      <section class="filter">
-        <ul>
-          <li><button type="button">All</button></li>
-        </ul>
-        <ul>
-          <li><button type="button">Web Site</button></li>
-        </ul>
-        <ul>
-          <li><button type="button">App</button></li>
-        </ul>
-        <ul>
-          <li><button type="button">Design</button></li>
-        </ul>
-        <ul>
-          <li><button type="button">Marketing</button></li>
-        </ul>
-      </section>
-      <!-- /SECTION-FILTER -->
-      <!-- SECTION-MAIN -->
+      <h1 class="main-head">Privileges</h1>
       <section class="privilege">
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="list">
             <img
               src="./images/banking.jpg"
               alt="application-interface"
@@ -85,7 +86,7 @@
             <h2>Banking App Interface Concept</h2>
             <p>App</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/cashless.jpg"
               alt="cashless-payment"
@@ -95,7 +96,7 @@
             <h2>Cashless Payment</h2>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/app.jpg"
               alt="laptop-with-open-app"
@@ -105,7 +106,7 @@
             <h2>Meditation App</h2>
             <p>App</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/taxi.jpg"
               alt="man-handling-the-wheel"
@@ -115,7 +116,7 @@
             <h2>Taxi Service</h2>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/screen.jpg"
               alt="screen-illustrations"
@@ -125,7 +126,7 @@
             <h2>Screen Illustrations</h2>
             <p>Design</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/online.jpg"
               alt="girl-using-a-phone"
@@ -135,7 +136,7 @@
             <h2>Online Courses</h2>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/instagram.jpg"
               alt="instagram-stories"
@@ -145,7 +146,7 @@
             <h2>Instagram Stories Concept</h2>
             <p>Design</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/food.jpg"
               alt="girl-carring-a-bag-with-food"
@@ -155,7 +156,7 @@
             <h2>Organic Food</h2>
             <p>Web Site</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="./images/coffee.jpg"
               alt="man-making-a-coffee"
