--- a/portfolio.html
+++ b/portfolio.html
@@ -53,121 +53,119 @@
     </header>
     <!-- HEADER -->
     <!-- SECTION-FILTER -->
-    <section class="filter">
-      <ul>
-        <li><button type="button">All</button></li>
-      </ul>
-      <ul>
-        <li><button type="button">Web Site</button></li>
-      </ul>
-      <ul>
-        <li><button type="button">App</button></li>
-      </ul>
-      <ul>
-        <li><button type="button">Design</button></li>
-      </ul>
-      <ul>
-        <li><button type="button">Marketing</button></li>
-      </ul>
-    </section>
     <!-- /SECTION-FILTER -->
     <!-- SECTION-MAIN -->
     <main>
-      <section class="privilege">
-        <h1 class="main-head">Privileges</h1>
+      <section class="filter">
         <ul class="list">
-          <li class="list">
-            <img
-              src="./images/banking.jpg"
-              alt="application-interface"
-              width="360"
-              height="300"
-            />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/cashless.jpg"
-              alt="cashless-payment"
-              width="360"
-              height="300"
-            />
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/app.jpg"
-              alt="laptop-with-open-app"
-              width="360"
-              height="300"
-            />
-            <h2>Meditation App</h2>
-            <p>App</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/taxi.jpg"
-              alt="man-handling-the-wheel"
-              width="360"
-              height="300"
-            />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/screen.jpg"
-              alt="screen-illustrations"
-              width="360"
-              height="300"
-            />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/online.jpg"
-              alt="girl-using-a-phone"
-              width="360"
-              height="300"
-            />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/instagram.jpg"
-              alt="instagram-stories"
-              width="360"
-              height="300"
-            />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/food.jpg"
-              alt="girl-carring-a-bag-with-food"
-              width="360"
-              height="300"
-            />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/coffee.jpg"
-              alt="man-making-a-coffee"
-              width="360"
-              height="300"
-            />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
-          </li>
+          <li class="list"><button type="button">All</button></li>
+        </ul>
+        <ul>
+          <li class="list"><button type="button">Web Site</button></li>
+        </ul>
+        <ul>
+          <li class="list"><button type="button">App</button></li>
+        </ul>
+        <ul>
+          <li class="list"><button type="button">Design</button></li>
+        </ul>
+        <ul>
+          <li class="list"><button type="button">Marketing</button></li>
         </ul>
       </section>
+      <h1 class="main-head">Privileges</h1>
+      <ul class="list">
+        <li class="list">
+          <img
+            src="./images/banking.jpg"
+            alt="application-interface"
+            width="360"
+            height="300"
+          />
+          <h2>Banking App Interface Concept</h2>
+          <p>App</p>
+        </li>
+        <li class="list">
+          <img
+            src="./images/cashless.jpg"
+            alt="cashless-payment"
+            width="360"
+            height="300"
+          />
+          <h2>Cashless Payment</h2>
+          <p>Marketing</p>
+        </li>
+        <li class="list">
+          <img
+            src="./images/app.jpg"
+            alt="laptop-with-open-app"
+            width="360"
+            height="300"
+          />
+          <h2>Meditation App</h2>
+          <p>App</p>
+        </li>
+        <li class="list">
+          <img
+            src="./images/taxi.jpg"
+            alt="man-handling-the-wheel"
+            width="360"
+            height="300"
+          />
+          <h2>Taxi Service</h2>
+          <p>Marketing</p>
+        </li>
+        <li class="list">
+          <img
+            src="./images/screen.jpg"
+            alt="screen-illustrations"
+            width="360"
+            height="300"
+          />
+          <h2>Screen Illustrations</h2>
+          <p>Design</p>
+        </li>
+        <li class="list">
+          <img
+            src="./images/online.jpg"
+            alt="girl-using-a-phone"
+            width="360"
+            height="300"
+          />
+          <h2>Online Courses</h2>
+          <p>Marketing</p>
+        </li>
+        <li class="list">
+          <img
+            src="./images/instagram.jpg"
+            alt="instagram-stories"
+            width="360"
+            height="300"
+          />
+          <h2>Instagram Stories Concept</h2>
+          <p>Design</p>
+        </li>
+        <li class="list">
+          <img
+            src="./images/food.jpg"
+            alt="girl-carring-a-bag-with-food"
+            width="360"
+            height="300"
+          />
+          <h2>Organic Food</h2>
+          <p>Web Site</p>
+        </li>
+        <li class="list">
+          <img
+            src="./images/coffee.jpg"
+            alt="man-making-a-coffee"
+            width="360"
+            height="300"
+          />
+          <h2>Fresh Coffee</h2>
+          <p>Web Site</p>
+        </li>
+      </ul>
     </main>
     <!-- /SECTION-MAIN -->
     <!-- FOOTER -->
