--- a/portfolio.html
+++ b/portfolio.html
@@ -56,24 +56,17 @@
     <!-- /SECTION-FILTER -->
     <!-- SECTION-MAIN -->
     <main>
+      <h1 class="main-head">Privileges</h1>
+
       <section class="filter">
-        <ul class="list">
-          <li class="list"><button type="button">All</button></li>
-        </ul>
-        <ul>
-          <li class="list"><button type="button">Web Site</button></li>
-        </ul>
-        <ul>
-          <li class="list"><button type="button">App</button></li>
-        </ul>
-        <ul>
-          <li class="list"><button type="button">Design</button></li>
-        </ul>
-        <ul>
-          <li class="list"><button type="button">Marketing</button></li>
+        <ul class="btn list">
+          <li class="btn list"><button type="button">All</button></li>
+          <li class="btn list"><button type="button">Web Site</button></li>
+          <li class="btn list"><button type="button">App</button></li>
+          <li class="btn list"><button type="button">Design</button></li>
+          <li class="btn list"><button type="button">Marketing</button></li>
         </ul>
       </section>
-      <h1 class="main-head">Privileges</h1>
       <ul class="list">
         <li class="list">
           <img
