--- a/portfolio.html
+++ b/portfolio.html
@@ -59,12 +59,22 @@
       <h1 class="main-head">Privileges</h1>
 
       <section class="filter">
-        <ul class="btn list">
-          <li class="btn list"><button type="button">All</button></li>
-          <li class="btn list"><button type="button">Web Site</button></li>
-          <li class="btn list"><button type="button">App</button></li>
-          <li class="btn list"><button type="button">Design</button></li>
-          <li class="btn list"><button type="button">Marketing</button></li>
+        <ul class="button list">
+          <li class="btn list">
+            <button type="button" class="secondary-btn">All</button>
+          </li>
+          <li class="btn list">
+            <button type="button" class="secondary-btn">Web Site</button>
+          </li>
+          <li class="btn list">
+            <button type="button" class="secondary-btn">App</button>
+          </li>
+          <li class="btn list">
+            <button type="button" class="secondary-btn">Design</button>
+          </li>
+          <li class="btn list">
+            <button type="button" class="secondary-btn">Marketing</button>
+          </li>
         </ul>
       </section>
       <ul class="list">
