--- a/portfolio.html
+++ b/portfolio.html
@@ -77,94 +77,112 @@
         </ul>
         <ul class="list">
           <li class="link">
-            <img
-              src="./images/banking.jpg"
-              alt="application-interface"
-              width="360"
-              height="300"
-            />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
+            <a href="">
+              <img
+                src="./images/banking.jpg"
+                alt="application-interface"
+                width="360"
+                height="300"
+              />
+              <h2>Banking App Interface Concept</h2>
+              <p>App</p>
+            </a>
           </li>
           <li class="link">
-            <img
-              src="./images/cashless.jpg"
-              alt="cashless-payment"
-              width="360"
-              height="300"
-            />
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
+            <a href="">
+              <img
+                src="./images/cashless.jpg"
+                alt="cashless-payment"
+                width="360"
+                height="300"
+              />
+              <h2>Cashless Payment</h2>
+              <p>Marketing</p>
+            </a>
           </li>
           <li class="link">
-            <img
-              src="./images/app.jpg"
-              alt="laptop-with-open-app"
-              width="360"
-              height="300"
-            />
-            <h2>Meditation App</h2>
-            <p>App</p>
+            <a href="">
+              <img
+                src="./images/app.jpg"
+                alt="laptop-with-open-app"
+                width="360"
+                height="300"
+              />
+              <h2>Meditation App</h2>
+              <p>App</p>
+            </a>
           </li>
           <li class="link">
-            <img
-              src="./images/taxi.jpg"
-              alt="man-handling-the-wheel"
-              width="360"
-              height="300"
-            />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+            <a href="">
+              <img
+                src="./images/taxi.jpg"
+                alt="man-handling-the-wheel"
+                width="360"
+                height="300"
+              />
+              <h2>Taxi Service</h2>
+              <p>Marketing</p>
+            </a>
           </li>
           <li class="link">
-            <img
-              src="./images/screen.jpg"
-              alt="screen-illustrations"
-              width="360"
-              height="300"
-            />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
+            <a href="">
+              <img
+                src="./images/screen.jpg"
+                alt="screen-illustrations"
+                width="360"
+                height="300"
+              />
+              <h2>Screen Illustrations</h2>
+              <p>Design</p>
+            </a>
           </li>
           <li class="link">
-            <img
-              src="./images/online.jpg"
-              alt="girl-using-a-phone"
-              width="360"
-              height="300"
-            />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+            <a href="">
+              <img
+                src="./images/online.jpg"
+                alt="girl-using-a-phone"
+                width="360"
+                height="300"
+              />
+              <h2>Online Courses</h2>
+              <p>Marketing</p>
+            </a>
           </li>
           <li class="link">
-            <img
-              src="./images/instagram.jpg"
-              alt="instagram-stories"
-              width="360"
-              height="300"
-            />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
+            <a href="">
+              <img
+                src="./images/instagram.jpg"
+                alt="instagram-stories"
+                width="360"
+                height="300"
+              />
+              <h2>Instagram Stories Concept</h2>
+              <p>Design</p>
+            </a>
           </li>
           <li class="link">
-            <img
-              src="./images/food.jpg"
-              alt="girl-carring-a-bag-with-food"
-              width="360"
-              height="300"
-            />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+            <a href="">
+              <img
+                src="./images/food.jpg"
+                alt="girl-carring-a-bag-with-food"
+                width="360"
+                height="300"
+              />
+              <h2>Organic Food</h2>
+              <p>Web Site</p>
+            </a>
           </li>
           <li class="link">
-            <img
-              src="./images/coffee.jpg"
-              alt="man-making-a-coffee"
-              width="360"
-              height="300"
-            />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+            <a href="">
+              <img
+                src="./images/coffee.jpg"
+                alt="man-making-a-coffee"
+                width="360"
+                height="300"
+              />
+              <h2>Fresh Coffee</h2>
+              <p>Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
